# winlink-portable

./: 818nd.md  README.md  baofeng.md  manpack.md  mkdocs.yml  part-list.md  pyproject.toml  radiomail.md  start-rigctld  windows.md
docs/: 818nd.md  README.md  hardcase.md  manpack.md  part-list.md  power.md  radiomail.md  requirements.txt  windows.md
docs/source/: conf.py
scripts/: CreateAdhocNet.xml  start-adhoc  start-rigctld
